[package]
name = "eolib"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
encoding_rs = "0.8.33"
rand = "0.8.5"
thiserror = "1.0"

[build-dependencies]
glob = "0.3.1"
serde = {version = "1.0", features = ["derive"]}
quick-xml = {version = "0.31.0", features = ["serialize", "overlapped-lists"]}
codegen = "0.2.0"
